--- a/app/src/main/res/layout/map.xml
+++ b/app/src/main/res/layout/map.xml
@@ -58,7 +58,28 @@
     </LinearLayout>
 
 
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:padding="16dp"
+        android:orientation="horizontal">
 
+        <ImageView
+            android:id="@+id/previous_moment"
+            android:layout_width="55dp"
+            android:layout_height="55dp"
+            android:src="@drawable/previous"/>
+
+        <ImageView
+            android:id="@+id/next_moment"
+            android:layout_width="55dp"
+            android:layout_height="55dp"
+            android:src="@drawable/next"/>
+
+
+    </LinearLayout>
 
 
 
