--- a/app/src/main/res/menu/navigation_layout_drawer.xml
+++ b/app/src/main/res/menu/navigation_layout_drawer.xml
@@ -3,21 +3,18 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_camera"
+            android:id="@+id/add_moments"
             android:icon="@drawable/ic_menu_camera"
             android:title="Add Moments"/>
         <item
-            android:id="@+id/nav_gallery"
+            android:id="@+id/view_list"
             android:icon="@drawable/ic_menu_gallery"
             android:title="View Moments List"/>
         <item
-            android:id="@+id/nav_slideshow"
+            android:id="@+id/map_show"
             android:icon="@drawable/ic_menu_slideshow"
             android:title="View Moments on Map"/>
-        <item
-            android:id="@+id/nav_manage"
-            android:icon="@drawable/ic_menu_manage"
-            android:title="Tools"/>
+
     </group>
 
 
